Cleaned up compiler warnings

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,3 +2,4 @@ M001 = Argument <{0}> cannot be null
 M002 = CardSet must contain at least 1 card
 M003 = Card must have a Suit and Rank
 M004 = Group must contain at least one CardSet
+M006 = Player must have a non-empty name
