Significant rewrite of property based test

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,3 +3,4 @@ M002 = CardSet must contain at least 1 card
 M003 = Card must have a Suit and Rank
 M004 = Group must contain at least one CardSet
 M006 = Player must have a non-empty name
+M999 = High card for a straight must be at least Rank.SIX. Internal logic error.
